Resolve "Remove line for tags"
Squashed commit of the following:

* add releasenote

* css: remove tag bar and bottom padding

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -111,8 +111,7 @@ a.code-stub-button {
 
 .article-tagged-item h2 { 
     display: inline-block;
-    padding: 0 0.8em 0.2em;
-    border-bottom: 2px solid;
+    padding: 0 0.8em 0;
 }
 
 .tag-list {
